add practical exercise from sesion 17

--- a/sprint-2/sesion-0703/index.html
+++ b/sprint-2/sesion-0703/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Sesión 13</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <nav class="header__nav">
-            <figure class="header__figure">
-                <img src="https://cdn.worldvectorlogo.com/logos/disney-records.svg" alt="Logo Disney">
-            </figure>
-            <ul class="header__list">
-                <li><a href="">Crear nuevo personaje</a></li>
-                <li><a href="">Favoritos</a></li>
-            </ul>
-        </nav>
+      <nav class="header__nav">
+        <figure class="header__figure">
+          <img
+            src="https://cdn.worldvectorlogo.com/logos/disney-records.svg"
+            alt="Logo Disney"
+          />
+        </figure>
+        <ul class="header__list">
+          <li><a href="">Crear nuevo personaje</a></li>
+          <li><a href="">Favoritos</a></li>
+        </ul>
+      </nav>
     </header>
     <main class="main">
-        <section class="main_cards">
-            
+      <section class="main_cards"></section>
+      <article class="cardVideo">
+        <figure><img src="https://static.wikia.nocookie.net/disney/images/3/37/Profile_-_Simba.jpeg" alt="simba" /></figure>
+        <section>
+            <h3>Nombre del video Nombre del video Nombre del video Nombre del video</h3>
+            <div>
+                <img src="https://static.wikia.nocookie.net/disney/images/3/37/Profile_-_Simba.jpeg" alt="simba">
+                <span>Whitney</span>
+            </div>
         </section>
+      </article>
     </main>
     <footer class="footer">Hecho con ❤ por el curso FrontEnd Cohorte 4</footer>
-    
+
     <script src="./scripts/script.js" type="module"></script>
-</body>
+  </body>
 </html>
