--- a/sprint-2/sesion-0703/pages/details.html
+++ b/sprint-2/sesion-0703/pages/details.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles/details.css">
     <title>Detalles</title>
-</head>
-<body>
-   <h1 id="title">Página de detalles</h1>
-   <script src="../scripts/details.js" type="module"></script>
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="header__nav">
+        <figure class="header__figure">
+          <img
+            src="https://cdn.worldvectorlogo.com/logos/disney-records.svg"
+            alt="Logo Disney"
+          />
+        </figure>
+        <ul class="header__list">
+          <li><a href="">Crear nuevo personaje</a></li>
+          <li><a href="">Favoritos</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main">
+      <h1 id="title">Página de detalles</h1>
+      <article id="information"></article>
+    </main>
+    <script src="../scripts/details.js" type="module"></script>
+  </body>
 </html>
