add practical exercise from sesion 18

--- a/sprint-2/sesion-0703/index.html
+++ b/sprint-2/sesion-0703/index.html
@@ -23,6 +23,11 @@
       </nav>
     </header>
     <main class="main">
+      <div class="main__botones">
+        <button name="all">Todos</button>
+        <button name="Film">Películas</button>
+        <button name="Tv Series">Series TV</button>
+      </div>
       <section class="main_cards"></section>
       <article class="cardVideo">
         <figure><img src="https://static.wikia.nocookie.net/disney/images/3/37/Profile_-_Simba.jpeg" alt="simba" /></figure>
