--- a/sprint-2/sesion-0703/pages/details.html
+++ b/sprint-2/sesion-0703/pages/details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/details.css">
+    <link rel="stylesheet" href="../styles/details.css" />
     <title>Detalles</title>
   </head>
   <body>
@@ -12,6 +12,7 @@
       <nav class="header__nav">
         <figure class="header__figure">
           <img
+            class="header__image"
             src="https://cdn.worldvectorlogo.com/logos/disney-records.svg"
             alt="Logo Disney"
           />
