add practical exercise from sesion 19

--- a/sprint-2/sesion-0703/pages/details.html
+++ b/sprint-2/sesion-0703/pages/details.html
@@ -18,7 +18,7 @@
           />
         </figure>
         <ul class="header__list">
-          <li><a href="">Crear nuevo personaje</a></li>
+          <li><a href="./formCharacters.html">Crear nuevo personaje</a></li>
           <li><a href="">Favoritos</a></li>
         </ul>
       </nav>
