--- a/sprint-2/sesion-0703/index.html
+++ b/sprint-2/sesion-0703/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    /> -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Sesión 13</title>
   </head>
   <body>
@@ -16,8 +25,23 @@
             alt="Logo Disney"
           />
         </figure>
+        <!-- <form id="search">
+          <input type="text" placeholder="buscar" />
+          <button type="submit">
+            <span class="material-symbols-outlined"> search </span>
+          </button>
+        </form> -->
+        <form class="search-bar">
+          <input type="text" placeholder="Buscar" name="" id="" />
+          <div class="actions">
+            <button type="submit">
+              <span class="material-icons">search</span>
+            </button>
+            <!-- <button><span class="material-icons">mic</span></button> -->
+          </div>
+        </form>
         <ul class="header__list">
-          <li><a href="">Crear nuevo personaje</a></li>
+          <li><a href="./pages/formCharacters.html">Crear nuevo personaje</a></li>
           <li><a href="">Favoritos</a></li>
         </ul>
       </nav>
@@ -30,13 +54,23 @@
       </div>
       <section class="main_cards"></section>
       <article class="cardVideo">
-        <figure><img src="https://static.wikia.nocookie.net/disney/images/3/37/Profile_-_Simba.jpeg" alt="simba" /></figure>
+        <figure>
+          <img
+            src="https://static.wikia.nocookie.net/disney/images/3/37/Profile_-_Simba.jpeg"
+            alt="simba"
+          />
+        </figure>
         <section>
-            <h3>Nombre del video Nombre del video Nombre del video Nombre del video</h3>
-            <div>
-                <img src="https://static.wikia.nocookie.net/disney/images/3/37/Profile_-_Simba.jpeg" alt="simba">
-                <span>Whitney</span>
-            </div>
+          <h3>
+            Nombre del video Nombre del video Nombre del video Nombre del video
+          </h3>
+          <div>
+            <img
+              src="https://static.wikia.nocookie.net/disney/images/3/37/Profile_-_Simba.jpeg"
+              alt="simba"
+            />
+            <span>Whitney</span>
+          </div>
         </section>
       </article>
     </main>
