add practical exercise from sesion 22

--- a/sprint-3/pagina-personajes-disney/pages/formCharacters.html
+++ b/sprint-3/pagina-personajes-disney/pages/formCharacters.html
@@ -41,7 +41,7 @@
             <label for="year">Año del programa</label>
             <input type="number" id="year" placeholder="Ingrese el año del programa">
             <label for="duration">Duración del programa</label>
-            <input type="number" id="duration" placeholder="Ingrese duración en minutos">
+            <input type="text" id="duration" placeholder="Ingrese duración en minutos">
             <button type="submit">Crear personaje</button>
         </form>
     </main>
