Agregando ejercicio práctico sesión 9

--- a/modulo-2/sprint-1/ejercicio-inmobiliaria/front-inmobiliaria/index.html
+++ b/modulo-2/sprint-1/ejercicio-inmobiliaria/front-inmobiliaria/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="./styles/indexStyles/style.css">
     <title>Casa Royal</title>
 </head>
 <body>
@@ -16,7 +18,7 @@
                 <span>Mon - Sun: 8:00am - 6:00pm</span>
             </div>
             <div class="header__login">
-                <p><a href="">LOGIN</a>/<a href="">REGISTER</a></p>
+                <p><a href="./pages/loginUser.html">LOGIN</a>/<a href="">REGISTER</a></p>
             </div>
         </section>
         <nav class="header__navbar">
